<resources>
    <string name="app_name">winery</string>
    <string name="company_info">Company Info</string>
    <string name="location_info">Location Info</string>
    <string name="Contact_info">Contact Info</string>
    <string name="Necessary_info">Necessary Info</string>
    <string name="signup">Sign Up</string>
    <string name="left_review">Submit</string>
    <string name="signin_info">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="phone">Phone</string>
    <string name="web_site">Web site</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="industry">Industry</string>
    <string name="don_t_have_an_account_yet">Don\'t have an Account Yet?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="error_network_check">Please Check data network Connection</string>
    <string name="loading">Authenticating...</string>
    <string name="waiting">Data coming soon...</string>
    <string name="web_contact">Contact</string>
    <string name="directphone">Direct Phone</string>
    <string name="pay_info">Pay Info</string>
    <string name="basic_plan">Basic plan</string>
    <string name="advanced_plan">Advanced plan</string>
    <string name="basic_content">$2 per month \n\n1. Update their winery information \n\n2. Reply to reviews made by users</string>
    <string name="advanced_content">$5 per month \n\n1. Update their winery information \n\n2. Reply to reviews made by users\n\n3. Add events that will show on their winery listing page and on the events section of the app</string>
<!--stripe-->
    <string name="publishablekey">pk_test_vaHoe93KIVvNpACH2HqQRwfh00SRptx2F9</string>
    <string name="icon">Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key">AIzaSyD9pAeZRlhgZtaGEYeoRqH6MQfF2diNbm8</string>
</resources>
