<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightColor"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_Title_Necessary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_title"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/signin_info"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <CheckBox
                    android:id="@+id/chkRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="13sp"
                    android:textColor="@color/text_color"
                    android:button="@drawable/checkbox_selector"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/txtForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textSize="13sp"
                    android:textColor="@color/text_color"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_button"
                android:layout_gravity="center_horizontal|center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="#FFFFFF"
                android:text="@string/signIn"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/textColor"
                android:text="@string/don_t_have_an_account_yet"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/btn_toSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_edges"
                android:layout_gravity="center_horizontal|center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/signup"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>