<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/splash_bg"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightColor"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Title_Necessary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_title"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Tour Info"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <EditText
                android:id="@+id/edt_tour_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Tour Company Name"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edt_tour_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_tour_City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/city"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_tour_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/state"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_tour_Zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/zip"
                android:inputType="number"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_tour_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Phone"
                android:inputType="number"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edt_tour_Website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Website"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edt_tour_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Description"
                android:inputType="textEmailAddress|textMultiLine"
                android:lines="20"
                android:minLines="5"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_tour_Logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_bg"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="Logo"
                android:textColorHint="@color/textHintColor"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="18sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <Button
                android:id="@+id/btn_tour_Update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:text="Submit"
                android:textSize="15sp"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>